--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,10 @@
   * First 1.0 stable version. Too changes to describe here.
   
 2011-07-08  Giovanni Capuano  <webmaster@giovannicapuano.net>
-  * Fix to form size and alignment.
+  * Fix form size and alignment.
   
 2011-07-10  Giovanni Capuano  <webmaster@giovannicapuano.net>
-  * 1.9 version, with m2ts input, form alignment fix and output dialog extended to system root.
+  * 1.1 version, with m2ts input, form alignment fix and output dialog extended to system root.
+
+2013-09-10   Giovanni Capuano  <webmaster@giovannicapuano.net>
+  * Update qaac to 2.20, eac3to to 3.27 and AppleApplicationSupport to 2.3.4.
